Fix contact image alignment on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -637,7 +637,7 @@ img {
 
 .contact__img {
   width: 320px;
-  justify-self: center;
+  margin: 0 auto;
 }
 
 .contact__data {
